--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<div id="about">
+  <div class="text-center">
+    <h1>Hướng dẫn sử dụng</h1>
+
+    <p>Các bạn nhập ngày sinh để xem các mục còn lại nhóe</p>
+  </div>
+
+  <h3>Số chủ đạo (Ruling number)</h3>
+  <p>Đây là phần quan trọng nhất, các phần còn lại chỉ đóng góp hoặc giảm nhẹ các yếu tố được nhắc đến trong Số chủ đạo
+  </p>
+
+  <h3>Nguồn:</h3>
+  <p>- Phần lớn dữ liệu lấy từ trang facebook và youtube của cô Lê Đỗ Quỳnh Hương</p>
+  <p>- Ngoài ra còn có 1 số phần là tự dịch từ tài liệu tiếng Anh về Numerology</p>
+</div>
