--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
         <button class="nav-button" type="button" mat-fab color="primary"
           (click)="drawer.toggle(); showNavButton = false" *ngIf="showNavButton">
-          <mat-icon>vertical_split</mat-icon>
+          <mat-icon>menu</mat-icon>
         </button>
 
       </div>
