--- a/src/app/general-input/general-input.component.scss
+++ b/src/app/general-input/general-input.component.scss
@@ -1,8 +1,11 @@
 #general-input {
   height: 700px;
   display: flex;
+  flex-direction: column;
 
   .middle-field {
     margin: auto;
+    display: flex;
+    flex-direction: column;
   }
 }
