--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,11 @@
     </mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item>
-      <button (click)="checkData()" [routerLink]="['/life-peak']" fxFlexFill mat-button color="accent">4 đỉnh cao</button>
+      <button (click)="checkData()" [routerLink]="['/life-peak']" fxFlexFill mat-button color="accent">Năm quan trọng</button>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>
+      <button (click)="closeNavBar()" [routerLink]="['/about']" fxFlexFill mat-button color="accent">Thông tin</button>
     </mat-list-item>
   </mat-list>
 
