--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,10 +9,11 @@
     height: 100%;
 
     #content {
+      height: 100%;
       min-height: 700px;
 
       .nav-button {
-        position: absolute;
+        position: fixed;
         bottom: 8px;
         right: 8px;
         z-index: 1;
@@ -25,6 +26,21 @@
   }
 }
 
-.max-height{
+.max-height {
   height: 100%;
+}
+
+::ng-deep {
+
+  .mat-h1,
+  .mat-headline,
+  .mat-typography h1,
+  .mat-h2,
+  .mat-title,
+  .mat-typography h2,
+  .mat-h3,
+  .mat-subheading-2,
+  .mat-typography h3 {
+    font-family: "Courier", "Helvetica Neue", sans-serif;
+  }
 }
