--- a/src/app/ruling-number/ruling-number.component.scss
+++ b/src/app/ruling-number/ruling-number.component.scss
@@ -1,5 +1,6 @@
 #ruling-number-component {
     max-width: 700px;
+    height: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
