--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <h3>Số chủ đạo (Ruling number)</h3>
-  <p>Đây là phần quan trọng nhất, các phần còn lại chỉ đóng góp hoặc giảm nhẹ các yếu tố được nhắc đến trong Số chủ đạo
+  <p>Đây là phần quan trọng nhất, các phần còn lại sẽ đóng góp hoặc giảm nhẹ các yếu tố được nhắc đến trong Số chủ đạo
   </p>
 
   <h3>Nguồn:</h3>
