--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,9 +7,11 @@ body {
 
 body {
     margin: 0;
-    font-family: "Courier", "Helvetica Neue", sans-serif;
+    // font-family: "Courier", "Helvetica Neue", sans-serif;
+    font-weight: 350;
 }
 
 body * {
-    font-family: "Courier", "Helvetica Neue", sans-serif;
+    // font-family: "Courier", "Helvetica Neue", sans-serif;
+    font-weight: 350;
 }
