--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,5 +1,10 @@
 #about {
   padding: 8px;
+  max-width: 700px;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 .text-center{
     text-align: center;
