--- a/src/app/life-peak/life-peak.component.html
+++ b/src/app/life-peak/life-peak.component.html
@@ -9,10 +9,15 @@
 
         <div *ngFor="let lp of lifePeaks; let i=index">
             <div class="description-container">
-                <h2>Đỉnh cao thứ {{i+1}} vào năm {{lp.age}} tuổi: số {{lp.number}}</h2>
-                <div class="description-paragraph" *ngFor="let des of lp.descriptions">
-                    <h3>{{des.type}}</h3>
-                    <p>{{des.content}}</p>
+                <h2 (click)="lp.expanded = !lp.expanded">Đỉnh cao thứ {{i+1}} vào năm {{lp.age}} tuổi: số {{lp.number}}
+                    <mat-icon *ngIf="!lp.expanded">keyboard_arrow_up</mat-icon>
+                    <mat-icon *ngIf="lp.expanded">keyboard_arrow_down</mat-icon>
+                </h2>
+
+                <div *ngIf="lp.expanded">
+                    <div class="description-paragraph" *ngFor="let des of lp.descriptions">
+                        <p>{{des.content}}</p>
+                    </div>
                 </div>
             </div>
         </div>
