--- a/src/app/ruling-number/ruling-number.component.scss
+++ b/src/app/ruling-number/ruling-number.component.scss
@@ -30,10 +30,13 @@
         .description-paragraph {
             padding-bottom: 14px;
 
+            .mat-icon {
+                vertical-align: sub;
+            }
+
             p {
                 text-align: justify;
             }
         }
-
     }
 }
