--- a/src/app/birth-chart/birth-chart.component.html
+++ b/src/app/birth-chart/birth-chart.component.html
@@ -42,5 +42,13 @@
                 <p>{{des.content}}</p>
             </div>
         </div>
+
+        <div *ngFor="let number of chartNumbers">
+            <h3>Số {{number.number}}</h3>
+            <div class="description-paragraph" *ngFor="let des of number.descriptions">
+                <h3>{{des.type}}</h3>
+                <p>{{des.content}}</p>
+            </div>
+        </div>
     </div>
 </div>
