--- a/src/app/ruling-number/ruling-number.component.scss
+++ b/src/app/ruling-number/ruling-number.component.scss
@@ -22,6 +22,7 @@
 
     .description-container {
         padding: 14px;
+        box-sizing: border-box;
 
         h2 {
             text-align: center;
