--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,6 @@
 }
 
 ::ng-deep {
-
   .mat-h1,
   .mat-headline,
   .mat-typography h1,
@@ -43,5 +42,18 @@
   .mat-typography h3 {
     // font-family: "Courier", "Helvetica Neue", sans-serif;
     font-weight: 400;
+  }
+
+  pre {
+    white-space: pre-wrap;
+    /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
   }
 }
