--- a/src/app/birth-chart/birth-chart.component.scss
+++ b/src/app/birth-chart/birth-chart.component.scss
@@ -1,5 +1,6 @@
 #birth-chart-component {
     max-width: 700px;
+    height: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -24,18 +25,10 @@
     .description-container {
         width: 100%;
         padding: 14px;
+        box-sizing: border-box;
     }
 
-    pre {
-        white-space: pre-wrap;
-        /* Since CSS 2.1 */
-        white-space: -moz-pre-wrap;
-        /* Mozilla, since 1999 */
-        white-space: -pre-wrap;
-        /* Opera 4-6 */
-        white-space: -o-pre-wrap;
-        /* Opera 7 */
-        word-wrap: break-word;
-        /* Internet Explorer 5.5+ */
+    h2 {
+        margin: 16px 0 14px;
     }
 }
