--- a/src/app/life-peak/life-peak.component.scss
+++ b/src/app/life-peak/life-peak.component.scss
@@ -22,6 +22,7 @@
 
     .description-container {
         padding: 14px;
+        box-sizing: border-box;
 
         .mat-icon {
             vertical-align: sub;
