--- a/src/app/birth-chart/birth-chart.component.scss
+++ b/src/app/birth-chart/birth-chart.component.scss
@@ -28,6 +28,10 @@
         box-sizing: border-box;
     }
 
+    .name-numbers {
+        color: coral;
+    }
+
     h2 {
         margin: 16px 0 14px;
     }
