--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,16 @@
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    // font-family: "Courier", "Helvetica Neue", sans-serif;
-    font-weight: 350;
+  margin: 0;
+  font-family: "Courier", "Helvetica Neue", sans-serif;
+  font-weight: 350;
 }
 
 body * {
-    // font-family: "Courier", "Helvetica Neue", sans-serif;
-    font-weight: 350;
+  font-family: "Courier", "Helvetica Neue", sans-serif;
+  font-weight: 350;
 }
