--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,7 @@
   .mat-h3,
   .mat-subheading-2,
   .mat-typography h3 {
-    // font-family: "Courier", "Helvetica Neue", sans-serif;
+    font-family: "Courier", "Helvetica Neue", sans-serif;
     font-weight: 400;
   }
 
